week06 put delete val err
