# project02/routes/books.js
@@ -4,19 +4,21 @@ const router = express.Router();
 const booksController = require('../controllers/books');
 
 // get/read all books
-router.get('/', booksController.getBooks);
+router.get('/', 
 // #swagger.summary = 'get all books from db'
 // #swagger.description = 'get all books from db'
+booksController.getBooks);
 
 // get/read a book by id
-router.get('/:id', booksController.getBook);
+router.get('/:id', 
 // #swagger.summary = 'get a book from db'
 // #swagger.description = 'get a book from db'
+booksController.getBook);
 
 // post/create a new book
 router.post('/',
-// #swagger.summary = 'add new book to db'
-// #swagger.description = 'add new book to db'
+// #swagger.summary = 'update book in db'
+// #swagger.description = 'update book in db'
 /* 
 swagger.responses[201] = {description: 'OK'}}}
 */
@@ -27,6 +29,27 @@ swagger.parameters['obj'] = {
     schema: { $ref: '#/definitions/books' }} 
  */
 booksController.createBook);
+
+// post/create a new book
+router.put('/:id',
+// #swagger.summary = 'update book in db by id '
+// #swagger.description = 'update book in db by id'
+/* 
+swagger.responses[204] = {description: 'OK'}}}
+*/
+ /*
+swagger.parameters['obj'] = {
+    in: 'body',
+    description: 'Add a book',
+    schema: { $ref: '#/definitions/books' }} 
+ */
+booksController.updateBook);
+
+// gdelete a book by id
+router.delete('/:id', 
+// #swagger.summary = 'delete a book from db'
+// #swagger.description = 'delete a book from db'
+booksController.deleteBook);
 
 
 module.exports = router;
