# project02/routes/index.js
@@ -3,5 +3,6 @@ const router = express.Router();
 
 router.use('/', require('./swagger'));
 router.use('/books', require('./books'));
+router.use('/authors', require('./authors'));
 
 module.exports = router;
